--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme {
+    --color-primary: #9f98ff;
+    --color-primary-hover: #887ef5;
+    --color-active: #7266e3;
+    --color-secondary: #f5f4ff;
+    --color-border: #dcd9ff
+}
+
