--- a/app/globals.css
+++ b/app/globals.css
@@ -8,3 +8,15 @@
     --color-border: #dcd9ff
 }
 
+@layer components {
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    input[type="number"] {
+        -moz-appearance: textfield;
+    }
+}
+
